FreeST/test/Programs/InvalidTests/Linearity/topLevelNotUsed/topLevelNotUsed.fst
f : Int 1-> Int
f n = n + 1

main : ()
main = ()
